# labkit

./: .gitignore  JUPYTER_README.md  Makefile  README.md  example.py  fix_chinese_fonts.py  labbook.sh  labkit.py  nbformat_guide.md  pyproject.toml  requirements-dev.txt  requirements-jupyter.txt  requirements.txt  test_labkit.py
docs/: advise.md  labbook-action.md  labbook-yaml-design.md  labbook.md  network-config-yaml-design.md  network-dir-design.md  playbook-yaml-design.md
docs/ai-driven/: ai-labbook-builder-guide.md  labbook-success-experience.md
examples/: build.py  build2.py  build_jupytext.py
examples/satusgh/: README.md  USER_MANUAL.md  manage.py  servers.json  util.py
examples/satusgh/configs/: framework.json  servers.json
labkit/: README.md  __init__.py  builders.py  validators.py  visualization.py  visualization_demo.py
labkit/builder/: README.md  __init__.py  actions.md  intent.md  labbook_builder.py
labkit/cli/: main.py  templates.py  utils.py
labkit/cli/commands/edit/: __init__.py  link.py  main.py  node.py  tui.py
labkit/cli/commands/init/: main.py
labkit/cli/commands/run/: main.py
labkit/cli/commands/validate/: main.py
labkit/generators/: __init__.py  labbook.py
labkit/jupyter/: nbformat_examples.py
labkit/jupyter/assets/: webterminal.html
labkit/labgrid/: README.md  __init__.py  config.py  example.py  experiment.py  framework.py  labx.py  manager.py  registry.py  resource_manager.py  result_manager.py  task_manager.py  types.py
labkit/models/: __init__.py  action.py  base.py  capabilities.py  events.py  labbook.py  network.py  playbook.py
labkit/remote/: README.md  __init__.py  commands.py  connection.py  example.py  example_usage.py  file_ops.py  manager.py  monitoring.py  remote.py  test_remote.py
labkit/router/: __init__.py
labkit/router/frr/: __init__.py  bfd.py  bgp.py  daemons.py  ospf.py  zebra.py
test/: Makefile  README.md  labkit_validate.py  test_builders.py  test_events.py  test_labkit.py  test_network_config.py  test_validator.py
test/fixtures/: invalid_labbook.yaml  invalid_network_config.yaml  invalid_playbook.yaml  labbook.yaml  network_config.yaml  network_config_ordered.yaml  playbook.yaml
